--- a/main.html
+++ b/main.html
@@ -8,17 +8,17 @@
 </head>
 <body>
 
-    <h1>Image Gallery</h1>
-    
-    <!-- Image Gallery Container -->
-    <div class="gallery">
-        <img src="https://via.placeholder.com/300" alt="Image 1">
-        <img src="https://via.placeholder.com/400" alt="Image 2">
-        <img src="https://via.placeholder.com/350" alt="Image 3">
-        <img src="https://via.placeholder.com/250" alt="Image 4">
-        <img src="https://via.placeholder.com/500" alt="Image 5">
-        <img src="https://via.placeholder.com/450" alt="Image 6">
-    </div>
+    <main class="cards">
+        <!-- Image Gallery Container -->
+        <div class="gallery">
+            <img src="https://via.placeholder.com/300" alt="Image 1">
+            <img src="https://via.placeholder.com/400" alt="Image 2">
+            <img src="https://via.placeholder.com/350" alt="Image 3">
+            <img src="https://via.placeholder.com/250" alt="Image 4">
+            <img src="https://via.placeholder.com/500" alt="Image 5">
+            <img src="https://via.placeholder.com/450" alt="Image 6">
+        </div>
+    </main>
 
 </body>
 </html>
